[project]
name = "2D-VQ-AE-2"
version = "0.3.0"
description = "2D Vector-Quantized Auto-Encoder for compression of Whole-Slide Images in Histopathology"
authors = [
    {name = "Robert Jan Schlimbach"},
]
dependencies = [
    "torch==1.11.0+cpu",
    "torchvision==0.12.0+cpu",
    "intel_extension_for_pytorch==1.11.0+cpu",
    "oneccl_bind_pt==1.11.0",
    "pytorch-lightning>=1.6.1",
    "torchmetrics>=0.8.0",
    "hydra @ git+https://github.com/sara-nl/hydra-2.0.git@179f7467ce274cce13c91ccc212b9e2212823718", # hydra
    "git+https://github.com/sara-nl/hydra-2.0.git@179f7467ce274cce13c91ccc212b9e2212823718#egg=hydra-optuna-sweeper&subdirectory=plugins/hydra_optuna_sweeper", # hydra_optuna_sweeper
    "git+https://github.com/sara-nl/hydra-2.0.git@179f7467ce274cce13c91ccc212b9e2212823718#egg=hydra-submitit-launcher&subdirectory=plugins/hydra_submitit_launcher", # hydra_submitit_launcher
    "albumentations>=1.1.0",
    "h5py>=3.6.0",
    "matplotlib>=3.5.2",
]
requires-python = ">=3.9,<3.11"  # scipy doesn't support 3.11 yet
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/sara-nl/2D-VQ-AE-2"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cpu"
name = "torch"

[[tool.pdm.source]]
url = "https://software.intel.com/ipex-whl-stable"
name = "intel-torch"



[tool.pdm.dev-dependencies]
dev = [
    "rich>=12.4.1",
]
